# torpor

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  feature-branch.yml  outdated.yml  pr.yml
docs/: README.md  config.example.toml
docs/architecture/: data-model.md  request-execution.md  storage.md  system-overview.md  tui-layout.md
docs/engineering/: ci-cd.md  contributing.md  testing-strategy.md
docs/engineering/decisions/: ADR-001-yaml-file-format.md  ADR-002-rustls-over-openssl.md  ADR-003-sqlite-for-history.md  ADR-004-keyring-for-secrets.md  ADR-005-user-configuration.md  README.md
docs/planning/: phase-1-working-loop.md  phase-2-collections.md  phase-3-environments.md  phase-4-assertions.md  phase-5-chaining.md
docs/vision/: problem-statement.md  roadmap.md  use-cases.md
src/: app.rs  main.rs
src/config/: keybinds.rs  mod.rs  theme.rs
src/engine/: mod.rs
src/events/: mod.rs  request_pane.rs  response_pane.rs  theme_selector.rs  url_bar.rs
src/models/: collection.rs  environment.rs  main.rs  mod.rs  request.rs  workspace.rs
src/storage/: collection.rs  environment.rs  mod.rs  request.rs  workspace.rs
src/tui/: headers_editor.rs  mod.rs  request_pane.rs  response_pane.rs  status_bar.rs  theme_selector.rs  url_bar.rs
